remove ===-lines in cvs log comments, so removelog awk script does its work correctly
 SVN 7538@trunk

--- a/debugger/breakpointsdlg.lfm
+++ b/debugger/breakpointsdlg.lfm
@@ -1,11 +1,13 @@
 object BreakpointsDlg: TBreakpointsDlg
+  ActiveControl = lvBreakPoints
   Caption = 'Breakpoint list'
   ClientHeight = 205
   ClientWidth = 560
   OnCreate = BreakpointsDlgCREATE
+  PixelsPerInch = 96
   Visible = True
-  HorzScrollBar.Page = 561
-  VertScrollBar.Page = 206
+  HorzScrollBar.Page = 559
+  VertScrollBar.Page = 204
   Left = 340
   Height = 205
   Top = 117
@@ -13,32 +15,35 @@ object BreakpointsDlg: TBreakpointsDlg
   HelpType = htKeyword
   object lvBreakPoints: TListView
     Align = alClient
+    BorderSpacing.OnChange = nil
     Columns = <    
       item
         Caption = 'State'
+        Width = 10
       end    
       item
         Caption = 'Filename/Address'
-        Width = 150
+        Width = 10
       end    
       item
         Caption = 'Line/Length'
-        Width = 100
+        Width = 10
       end    
       item
         Caption = 'Condition'
-        Width = 75
+        Width = 10
       end    
       item
         Caption = 'Action'
+        Width = 10
       end    
       item
         Caption = 'Pass Count'
-        Width = 100
+        Width = 10
       end    
       item
         Caption = 'Group'
-        Width = 0
+        Width = 10
       end>
     MultiSelect = True
     PopupMenu = mnuPopup
