--- a/debugger/callstackdlg.lfm
+++ b/debugger/callstackdlg.lfm
@@ -1,33 +1,31 @@
 object CallStackDlg: TCallStackDlg
+  ActiveControl = lvCallStack
   Caption = 'CallStack'
   ClientHeight = 200
   ClientWidth = 500
+  PixelsPerInch = 96
   Visible = True
-  HorzScrollBar.Page = 501
-  VertScrollBar.Page = 201
+  HorzScrollBar.Page = 499
+  VertScrollBar.Page = 199
   Left = 843
   Height = 200
   Top = 202
   Width = 500
   object lvCallStack: TListView
     Align = alClient
+    BorderSpacing.OnChange = nil
     Columns = <    
       item
         Caption = 'Source'
-        ImageIndex = -1
-        Visible = True
-        Width = 150
+        Width = 10
       end    
       item
         Caption = 'Line'
-        ImageIndex = -1
-        Visible = True
-        Width = 50
+        Width = 10
       end    
       item
         Caption = 'Function'
-        ImageIndex = -1
-        Visible = True
+        Width = 10
       end>
     ViewStyle = vsReport
     OnDblClick = lvCallStackDBLCLICK
