ListBox needs draw event if it is ownerdrawn.
 SVN 7676@trunk

--- a/examples/easter/main.lfm
+++ b/examples/easter/main.lfm
@@ -1,142 +1,152 @@
 object Form1: TForm1
-  BORDERSTYLE = bsdialog
-  CAPTION = 'Holy Days'
-  CLIENTHEIGHT = 195
-  CLIENTWIDTH = 430
-  ONCREATE = Form1CREATE
-  ONSHOW = Form1SHOW
-  POSITION = podesktopcenter
-  HORZSCROLLBAR.PAGE = 431
-  VERTSCROLLBAR.PAGE = 196
-  LEFT = 392
-  HEIGHT = 195
-  TOP = 213
-  WIDTH = 430
-  object Bevel1: TBEVEL
-    HEIGHT = 165
-    LEFT = 13
-    NAME = 'Bevel1'
-    SHAPE = bsframe
-    TOP = 11
-    WIDTH = 282
-    LEFT = 13
-    HEIGHT = 165
-    TOP = 11
-    WIDTH = 282
+  BorderStyle = bsDialog
+  Caption = 'Holy Days'
+  ClientHeight = 195
+  ClientWidth = 430
+  OnCreate = Form1CREATE
+  OnShow = Form1SHOW
+  PixelsPerInch = 96
+  Position = poDesktopCenter
+  HorzScrollBar.Page = 429
+  VertScrollBar.Page = 194
+  Left = 392
+  Height = 195
+  Top = 213
+  Width = 430
+  object Bevel1: TBevel
+    BorderSpacing.OnChange = nil
+    Height = 165
+    Left = 13
+    Name = 'Bevel1'
+    Shape = bsFrame
+    Top = 11
+    Width = 282
+    Left = 13
+    Height = 165
+    Top = 11
+    Width = 282
   end
-  object CalculateButton: TBUTTON
-    CAPTION = 'Berechne'
-    TABSTOP = True
-    TABORDER = 0
-    ONCLICK = Button1CLICK
-    LEFT = 312
-    HEIGHT = 35
-    TOP = 56
-    WIDTH = 104
+  object AshWednesdayLabel: TLabel
+    BorderSpacing.OnChange = nil
+    Caption = 'Aschermittwoch:'
+    Color = clNone
+    Left = 24
+    Height = 13
+    Top = 64
+    Width = 80
   end
-  object Listbox1: TLISTBOX
-    STYLE = lbownerdrawvariable
-    TABORDER = 1
-    TABSTOP = True
-    TOPINDEX = -1
-    LEFT = 136
-    HEIGHT = 101
-    TOP = 64
-    WIDTH = 141
+  object YearLabel: TLabel
+    BorderSpacing.OnChange = nil
+    Caption = 'Jahr'
+    Color = clNone
+    Left = 24
+    Height = 13
+    Top = 24
+    Width = 21
   end
-  object Edit1: TEDIT
-    TEXT = '2003'
-    TABSTOP = True
-    TABORDER = 2
-    LEFT = 136
-    HEIGHT = 23
-    TOP = 24
-    WIDTH = 141
+  object GoodFridayLabel: TLabel
+    BorderSpacing.OnChange = nil
+    Caption = 'Karfreitag:'
+    Color = clNone
+    Left = 24
+    Height = 13
+    Top = 81
+    Width = 52
   end
-  object AshWednesdayLabel: TLABEL
-    CAPTION = 'Aschermittwoch:'
-    LAYOUT = tltop
-    LEFT = 24
-    HEIGHT = 17
-    TOP = 64
-    WIDTH = 104
+  object EasterMondayLabel: TLabel
+    BorderSpacing.OnChange = nil
+    Caption = 'Ostermontag'
+    Color = clNone
+    Left = 24
+    Height = 13
+    Top = 98
+    Width = 63
   end
-  object YearLabel: TLABEL
-    CAPTION = 'Jahr'
-    LAYOUT = tltop
-    LEFT = 24
-    HEIGHT = 17
-    TOP = 24
-    WIDTH = 104
+  object AscensionDayLabel: TLabel
+    BorderSpacing.OnChange = nil
+    Caption = 'Himmelfahrt'
+    Color = clNone
+    Left = 24
+    Height = 13
+    Top = 115
+    Width = 57
   end
-  object GoodFridayLabel: TLABEL
-    CAPTION = 'Karfreitag:'
-    LAYOUT = tltop
-    LEFT = 24
-    HEIGHT = 17
-    TOP = 81
-    WIDTH = 104
+  object PentecostLabel: TLabel
+    BorderSpacing.OnChange = nil
+    Caption = 'Pfingsten'
+    Color = clNone
+    Left = 24
+    Height = 13
+    Top = 132
+    Width = 45
   end
-  object EasterMondayLabel: TLABEL
-    CAPTION = 'Ostermontag'
-    LAYOUT = tltop
-    LEFT = 24
-    HEIGHT = 17
-    TOP = 98
-    WIDTH = 104
+  object CorpusCristiLabel: TLabel
+    BorderSpacing.OnChange = nil
+    Caption = 'Fronleichnam'
+    Color = clNone
+    Left = 24
+    Height = 13
+    Top = 149
+    Width = 63
   end
-  object AscensionDayLabel: TLABEL
-    CAPTION = 'Himmelfahrt'
-    LAYOUT = tltop
-    LEFT = 24
-    HEIGHT = 17
-    TOP = 115
-    WIDTH = 104
+  object CalculateButton: TButton
+    BorderSpacing.OnChange = nil
+    Caption = 'Berechne'
+    OnClick = Button1CLICK
+    TabOrder = 0
+    Left = 312
+    Height = 35
+    Top = 56
+    Width = 104
   end
-  object PentecostLabel: TLABEL
-    CAPTION = 'Pfingsten'
-    LAYOUT = tltop
-    LEFT = 24
-    HEIGHT = 17
-    TOP = 131
-    WIDTH = 104
+  object Listbox1: TListBox
+    BorderSpacing.OnChange = nil
+    ItemHeight = 17
+    OnDrawItem = Listbox1DrawItem
+    Style = lbOwnerDrawFixed
+    TabOrder = 1
+    Left = 136
+    Height = 108
+    Top = 62
+    Width = 141
   end
-  object CorpusCristiLabel: TLABEL
-    CAPTION = 'Fronleichnam'
-    LAYOUT = tltop
-    LEFT = 24
-    HEIGHT = 17
-    TOP = 149
-    WIDTH = 104
+  object Edit1: TEdit
+    BorderSpacing.OnChange = nil
+    TabOrder = 2
+    Text = '2003'
+    Left = 136
+    Height = 23
+    Top = 24
+    Width = 141
   end
-  object EndButton: TBUTTON
-    CAPTION = 'Ende'
-    TABSTOP = True
-    TABORDER = 10
-    ONCLICK = Button2CLICK
-    LEFT = 312
-    HEIGHT = 35
-    TOP = 104
-    WIDTH = 104
+  object EndButton: TButton
+    BorderSpacing.OnChange = nil
+    Caption = 'Ende'
+    OnClick = Button2CLICK
+    TabOrder = 3
+    Left = 312
+    Height = 35
+    Top = 104
+    Width = 104
   end
-  object AboutButton: TBUTTON
-    CAPTION = 'Info'
-    TABSTOP = True
-    TABORDER = 11
-    ONCLICK = Button3CLICK
-    LEFT = 312
-    HEIGHT = 35
-    TOP = 152
-    WIDTH = 104
+  object AboutButton: TButton
+    BorderSpacing.OnChange = nil
+    Caption = 'Info'
+    OnClick = Button3CLICK
+    TabOrder = 4
+    Left = 312
+    Height = 35
+    Top = 152
+    Width = 104
   end
-  object LanguageButton: TBUTTON
-    CAPTION = 'English'
-    TABSTOP = True
-    TABORDER = 12
-    ONCLICK = LanguageButtonCLICK
-    LEFT = 312
-    HEIGHT = 35
-    TOP = 8
-    WIDTH = 104
+  object LanguageButton: TButton
+    BorderSpacing.OnChange = nil
+    Caption = 'English'
+    OnClick = LanguageButtonCLICK
+    TabOrder = 5
+    Left = 312
+    Height = 35
+    Top = 8
+    Width = 104
   end
 end
