--- a/ide/lazdocfrm.lfm
+++ b/ide/lazdocfrm.lfm
@@ -1,5 +1,5 @@
 object LazDocForm: TLazDocForm
-  ActiveControl = TabSheet1
+  ActiveControl = ErrorsTabSheet
   Caption = 'LazDoc editor'
   ClientHeight = 195
   ClientWidth = 753
@@ -12,15 +12,31 @@ object LazDocForm: TLazDocForm
   Top = 506
   Width = 753
   object PageControl: TPageControl
-    ActivePage = TabSheet1
+    ActivePage = ErrorsTabSheet
     Align = alClient
-    TabIndex = 0
+    TabIndex = 2
     TabOrder = 0
     TabPosition = tpBottom
     Height = 195
     Width = 753
-    object TabSheet1: TTabSheet
-      Caption = 'TabSheet1'
+    object ShortTabSheet: TTabSheet
+      Caption = 'ShortTabSheet'
+      ClientHeight = 169
+      ClientWidth = 745
+      Height = 169
+      Width = 745
+      object ShortEdit: TEdit
+        Align = alTop
+        BorderSpacing.OnChange = nil
+        OnChange = DescrMemoChange
+        TabOrder = 0
+        Text = 'ShortEdit'
+        Height = 23
+        Width = 745
+      end
+    end
+    object DescrTabSheet: TTabSheet
+      Caption = 'DescrTabSheet'
       ClientHeight = 169
       ClientWidth = 745
       Height = 169
@@ -32,18 +48,37 @@ object LazDocForm: TLazDocForm
         Font.Height = -12
         Font.Name = 'Courier New'
         Font.Pitch = fpFixed
+        Lines.Strings = (
+          'DescrMemo'
+        )
         OnChange = DescrMemoChange
         TabOrder = 0
         Height = 169
         Width = 745
       end
     end
-  end
-  object OpenDialog1: TOpenDialog
-    Title = 'Open existing file'
-    FilterIndex = 0
-    Title = 'Open existing file'
-    left = 29
-    top = 720
+    object ErrorsTabSheet: TTabSheet
+      Caption = 'ErrorsTabSheet'
+      ClientHeight = 169
+      ClientWidth = 745
+      Height = 169
+      Width = 745
+      object ErrorsMemo: TMemo
+        Align = alClient
+        BorderSpacing.OnChange = nil
+        Font.CharSet = ANSI_CHARSET
+        Font.Color = clBlack
+        Font.Height = -12
+        Font.Name = 'Courier New'
+        Font.Pitch = fpFixed
+        Lines.Strings = (
+          'ErrorsMemo'
+        )
+        OnChange = DescrMemoChange
+        TabOrder = 0
+        Height = 169
+        Width = 745
+      end
+    end
   end
 end
