use custom function to get #10 delimited text, TStringList adds quotes
 SVN 7697@trunk

--- a/ide/lazdocfrm.lfm
+++ b/ide/lazdocfrm.lfm
@@ -1,5 +1,6 @@
 object LazDocForm: TLazDocForm
   ActiveControl = ErrorsTabSheet
+  BorderStyle = bsSizeToolWin
   Caption = 'LazDoc editor'
   ClientHeight = 195
   ClientWidth = 753
